add MainMenuControlerTest